# darknet

./: .gitignore  Makefile  SQLE_README.md  algorithm.py  darknet_images.py  object_to_string.py  pyproject.toml  yolo.data  yolo.names
api/: README.md  deploy.sh  manage.py  pyproject.toml  yolo.cfg
api/capstone_project/: settings.py  urls.py
api/processor/: __init__.py  algorithm.py  darknet.py  object_to_string.py
api/slqe/: apps.py  custom_storage.py  jwt.py  jwt_utils.py  models.py  serializers.py  urls.py  utils.py  views.py
api/slqe/controller/: class_version_controller.py  image_controller.py  notification_controller.py  user_controller.py  views.py  weight_version_controller.py
api/slqe/migrations/: 0001_initial.py  0002_auto_20210314_0801.py  0003_auto_20210321_1543.py  0004_auto_20210323_1239.py  0005_auto_20210323_1424.py  0006_auto_20210323_1436.py  0007_auto_20210323_1458.py  0008_auto_20210330_1456.py  0009_auto_20210401_1347.py  0009_auto_20210425_0645.py  0009_notification.py  0010_auto_20210401_1348.py  0011_auto_20210401_1736.py  0012_merge_20210407_1421.py  0013_auto_20210407_1423.py  0014_auto_20210411_1731.py  0015_auto_20210422_1322.py
api/slqe/model/: models.py
api/slqe/serializer/: serializers.py
api/slqe/service/: class_version_service.py  image_service.py  notification_service.py  user_service.py  weight_version_service.py
api/slqe/url/: urls.py
api/slqe/utils/: jwt_utils.py
api/solver/: __init__.py  convert_to_postfix.py  error.py  polynomial.py  solve.py
solver/: convert_to_postfix.py  convert_to_token_list.py  solve.py  (+2 more)
(+1 files in other folders)
